Fix table alignment UI

--- a/static/style.css
+++ b/static/style.css
@@ -69,6 +69,18 @@ div.dataTables_wrapper div.dataTables_filter input {
   text-align: right;
 }
 
+td:first-child+td {
+  padding-right: 25px;
+}
+
+td:first-child+td+td {
+  padding-right: 25px;
+}
+
+table.dataTable.table-sm thead tr th:not(.sorting_disabled) {
+  padding-right: 25px;
+}
+
 th {
   font-weight: 600;
 }
@@ -77,7 +89,7 @@ table.dataTable tbody td {
   vertical-align: middle;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 420px) {
   li.paginate_button.previous {
     display: inline;
   }
@@ -86,6 +98,9 @@ table.dataTable tbody td {
   }
   li.paginate_button {
     display: none;
+  }
+  li.paginate_button.active {
+    display: inline;
   }
 }
 
